# wave

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  requirements.txt
.github/workflows/: ci.yml
include/: computation.h  geometries.h  matrix_method.h  particle.h  salt.hpp  salt_types.h
include/core/: wave_core.h
include/cpp/: wave_cpp.hpp
src/core/: CMakeLists.txt  wave_core.c
src/cpp/: CMakeLists.txt  wave_cpp.cpp
src/gui/: App.axaml  App.axaml.cs  CMakeLists.txt  MainWindow.axaml  MainWindow.axaml.cs  Program.cs  WaveGui.csproj  app.manifest
tests/: CMakeLists.txt  wave_tests.cpp
